Cleanup pom.xml and integrate it with parent pom HZ-625